fixed menu visibity on archive page

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -5,7 +5,7 @@
   width: 100vw;
   height: 100svh;
   pointer-events: none;
-  z-index: 2;
+  z-index: 10000;
 }
 
 .menu a,
